check validation render

--- a/src/popup.html
+++ b/src/popup.html
@@ -9,7 +9,7 @@
   <body>
       
       <p>
-        <input class="box send"/>
+        <input class="box send" placeholder="Share Link"/>
       </p>
 
       <p>
