conversion list logic render

--- a/src/popup.html
+++ b/src/popup.html
@@ -19,6 +19,10 @@
       <p> 
         <img class="box image">
       </p>
-      
+
+      <label>Conversion List</label> <span class="box allRemove">All Remove</span>
+
+      <div class="box todos"></div>
+
   </body>
 </html>
