--- a/src/popup.html
+++ b/src/popup.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet">   
+    
+    <!-- vendor -->
+    <script src="../vendor/lodash.min.js"></script>
+    <script src="../vendor/lowdb.min.js"></script>
+    <script src="../vendor/LocalStorage.min.js"></script>
+
     <script src="app.js"></script>
 
   </head>
